--- a/.github/workflows/MyWorkflow.yaml
+++ b/.github/workflows/MyWorkflow.yaml
@@ -6,23 +6,23 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Step1
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
+        run: date
 
   Job2:
     runs-on: windows-latest
     steps:
       - name: Step1
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
+        run: date
 
   Job3:
     runs-on: macos-latest
     steps:
       - name: Step1
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
+        run: date
 
   Job4: 
     needs: [Job1, Job2, Job3]
     runs-on: ubuntu-latest
     steps:
       - name: Step1
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
+        run: date
