--- a/.github/workflows/MyWorkflow.yaml
+++ b/.github/workflows/MyWorkflow.yaml
@@ -1,28 +1,28 @@
 name: My Workflow
 on: push
-
+env:
+  FILE_NAME : hello-server
 jobs:
   Job1:
     runs-on: ubuntu-latest
     steps: 
-      - name: Step1
-        run: date
+      - name: Check out code
+        uses: actions/checkout@v1
 
-  Job2:
-    runs-on: windows-latest
-    steps:
-      - name: Step1
-        run: date
+      - name: Build ${{ env.FILE_NAME }} for ubuntu-lastest
+        run: go build ${{ env.FILE_NAME }}.go
 
-  Job3:
-    runs-on: macos-latest
-    steps:
-      - name: Step1
-        run: date
+      - name: Build ${{ env.FILE_NAME }} for windows-lastest
+        run: GOO5=windoes GOARCH=amd64 go build ${{ env.FILE_NAME }}.go
 
-  Job4: 
-    needs: [Job1, Job2, Job3]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Step1
-        run: date
+      - name: Upload artifact for linux
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: linux
+          path: ./${{ env.FILE_NAME }}
+
+      - name: Upload artifact for windows
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: windows
+          path: ./${{ env.FILE_NAME }}.exe
